Added hotkeys for each unit

--- a/options/options.html
+++ b/options/options.html
@@ -57,11 +57,45 @@
       <div id="quick-convert-army-hotkey-container"></div>
       <div id="quick-convert-neutral-hotkey-container"></div>
       <div id="quick-remove-unit-hotkey-container"></div>
-      <div id="quick-build-slot-1-hotkey-container"></div>
-      <div id="quick-build-slot-2-hotkey-container"></div>
-      <div id="quick-build-slot-3-hotkey-container"></div>
-      <div id="quick-build-slot-4-hotkey-container"></div>
-      <div id="quick-build-slot-5-hotkey-container"></div>
+      <div id="quick-capture-hotkey-container"></div>
+
+      <h5 class="mt-3">Base Units</h5>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-infantry-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-mech-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-recon-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-apc-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-artillery-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-tank-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-anti-air-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-missile-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-rocket-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-md-tank-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-piperunner-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-neotank-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-megatank-hotkey-container"></div>
+      </div>
+
+      <h5 class="mt-3">Airport Units</h5>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-t-copter-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-b-copter-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-fighter-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-bomber-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-stealth-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-black-bomb-hotkey-container"></div>
+      </div>
+
+      <h5 class="mt-3">Port Units</h5>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-black-boat-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-lander-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-cruiser-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-sub-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-battleship-hotkey-container"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-2" id="quick-build-carrier-hotkey-container"></div>
+      </div>
+      <div id="end-turn-hotkey-container"></div>
       <h4 class="mt-3">Moveplanner Bug Fixes</h4>
       <div class="form-text mb-3">
         These options control fixes for a variety of bugs in the vanilla moveplanner.
