Added option to disable new hotkeys

--- a/options/options.html
+++ b/options/options.html
@@ -53,11 +53,23 @@
       <div id="toggle-calculator-container"></div>
       <div id="hold-quick-move-range-preview-container"></div>
       <div id="hold-quick-attack-range-preview-container"></div>
+
+      <h4 class="mt-4">Quick Action Hotkeys</h4>
+      <div class="form-text mb-3">
+        <button type="button" id="disable-quick-actions-btn" class="btn btn-sm btn-secondary">
+          Disable All Quick Action Hotkeys
+        </button>
+        <div class="mt-1 text-muted small">
+          In case you only want fixed CO portraits but not the hotkeys.
+        </div>
+      </div>
       <div id="quick-move-hotkey-container"></div>
       <div id="quick-convert-army-hotkey-container"></div>
       <div id="quick-convert-neutral-hotkey-container"></div>
       <div id="quick-remove-unit-hotkey-container"></div>
       <div id="quick-capture-hotkey-container"></div>
+      <div id="quick-wait-hotkey-container"></div>
+      <div id="quick-unwait-hotkey-container"></div>
 
       <h5 class="mt-3">Base Units</h5>
       <div class="row">
