--- a/options/options.html
+++ b/options/options.html
@@ -45,6 +45,7 @@
       <div id="enable-enhanced-damage-chart-container"></div>
       <h2 class="mt-3">Moveplanner Plus</h2>
       <div id="enable-moveplanner-plus-container"></div>
+      <div id="enable-snapshot-tree-view-container"></div>
       <div id="enable-move-range-preview-container"></div>
       <div id="enable-savestate-interception-container"></div>
       <div id="default-funding-range-container"></div>
